<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/army_green"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/new_btn"
            android:layout_width="47dip"
            android:layout_height="47dip"
            android:layout_marginTop="5dp"
            android:background="@drawable/new_icn"
            android:contentDescription="@string/start_new"
            android:src="@drawable/drawable" />

        <ImageButton
            android:id="@+id/draw_btn"
            android:layout_width="47dip"
            android:layout_height="47dip"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/brush_icn"
            android:contentDescription="@string/brush"
            android:src="@drawable/drawable" />

        <ImageButton
            android:id="@+id/erase_btn"
            android:layout_width="47dip"
            android:layout_height="47dip"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/eraser_icn"
            android:contentDescription="@string/erase"
            android:src="@drawable/drawable" />

        <ImageButton
            android:id="@+id/opacity_btn"
            android:layout_width="47dip"
            android:layout_height="47dip"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/opacity_icn"
            android:contentDescription="@string/opacity"
            android:src="@drawable/drawable" />

        <ImageButton
            android:id="@+id/save_btn"
            android:layout_width="47dip"
            android:layout_height="47dip"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/save_icn"
            android:contentDescription="@string/save"
            android:src="@drawable/drawable" />
    </LinearLayout>


    <!-- экземпляр DrawingView -->

    <com.example.drawingapp.DrawingView
        android:id="@+id/drawing"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="20dp"
        android:layout_weight="1"
        android:background="@drawable/drawingareacorners" />


    <!-- цветовая палитра -->

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:orientation="vertical">

        <!-- верхний ряд -->
        <LinearLayout
            android:id="@+id/paint_colors"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageButton
                android:layout_width="@dimen/large_brush"
                android:layout_height="@dimen/large_brush"
                android:layout_margin="2dp"
                android:background="@color/red_brown"
                android:contentDescription="@string/paint"
                android:onClick="paintClicked"
                android:src="@drawable/drawable"
                android:tag="@color/red_brown" />

            <ImageButton
                android:layout_width="@dimen/large_brush"
                android:layout_height="@dimen/large_brush"
                android:layout_margin="2dp"
                android:background="@color/tomato"
                android:contentDescription="@string/paint"
                android:onClick="paintClicked"
                android:src="@drawable/drawable"
                android:tag="@color/tomato" />

            <ImageButton
                android:layout_width="@dimen/large_brush"
                android:layout_height="@dimen/large_brush"
                android:layout_margin="2dp"
                android:background="@color/dusty_orange"
                android:contentDescription="@string/paint"
                android:onClick="paintClicked"
                android:src="@drawable/drawable"
                android:tag="@color/dusty_orange" />

            <ImageButton
                android:layout_width="@dimen/large_brush"
                android:layout_height="@dimen/large_brush"
                android:layout_margin="2dp"
                android:background="@color/macaroni_and_cheese"
                android:contentDescription="@string/paint"
                android:onClick="paintClicked"
                android:src="@drawable/drawable"
                android:tag="@color/macaroni_and_cheese" />

            <ImageButton
                android:layout_width="@dimen/large_brush"
                android:layout_height="@dimen/large_brush"
                android:layout_margin="2dp"
                android:background="@color/green"
                android:contentDescription="@string/paint"
                android:onClick="paintClicked"
                android:src="@drawable/drawable"
                android:tag="@color/green" />

            <ImageButton
                android:layout_width="@dimen/large_brush"
                android:layout_height="@dimen/large_brush"
                android:layout_margin="2dp"
                android:background="@color/nice_blue"
                android:contentDescription="@string/paint"
                android:onClick="paintClicked"
                android:src="@drawable/drawable"
                android:tag="@color/nice_blue" />

        </LinearLayout>

        <!-- нижний ряд -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageButton
                android:layout_width="@dimen/large_brush"
                android:layout_height="@dimen/large_brush"
                android:layout_margin="2dp"
                android:background="@color/royal"
                android:contentDescription="@string/paint"
                android:onClick="paintClicked"
                android:src="@drawable/drawable"
                android:tag="@color/royal" />

            <ImageButton
                android:layout_width="@dimen/large_brush"
                android:layout_height="@dimen/large_brush"
                android:layout_margin="2dp"
                android:background="@color/barney"
                android:contentDescription="@string/paint"
                android:onClick="paintClicked"
                android:src="@drawable/drawable"
                android:tag="@color/barney" />

            <ImageButton
                android:layout_width="@dimen/large_brush"
                android:layout_height="@dimen/large_brush"
                android:layout_margin="2dp"
                android:background="@color/pastel_red"
                android:contentDescription="@string/paint"
                android:onClick="paintClicked"
                android:src="@drawable/drawable"
                android:tag="@color/pastel_red" />

            <ImageButton
                android:layout_width="@dimen/large_brush"
                android:layout_height="@dimen/large_brush"
                android:layout_margin="2dp"
                android:background="#FFFFFFFF"
                android:contentDescription="@string/paint"
                android:onClick="paintClicked"
                android:src="@drawable/drawable"
                android:tag="#FFFFFFFF" />

            <ImageButton
                android:layout_width="@dimen/large_brush"
                android:layout_height="@dimen/large_brush"
                android:layout_margin="2dp"
                android:background="#FF787878"
                android:contentDescription="@string/paint"
                android:onClick="paintClicked"
                android:src="@drawable/drawable"
                android:tag="#FF787878" />

            <ImageButton
                android:layout_width="@dimen/large_brush"
                android:layout_height="@dimen/large_brush"
                android:layout_margin="2dp"
                android:background="#FF000000"
                android:contentDescription="@string/paint"
                android:onClick="paintClicked"
                android:src="@drawable/drawable"
                android:tag="#FF000000" />

        </LinearLayout>

    </LinearLayout>
</LinearLayout>



